[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/loadingscreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/load.gd" type="Script" id=2]
[ext_resource path="res://duckie.png" type="Texture" id=3]
[ext_resource path="res://scenes/AnimatedSprite.gd" type="Script" id=4]

[sub_resource type="NoiseTexture" id=1]
width = 100
height = 100

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
} ]

[node name="loadingscreen" type="Node2D"]
z_index = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.545098 )
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 15
texture = SubResource( 1 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.545098 )
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 15
texture = SubResource( 1 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -199, 220 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -358, 103 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -417, 390 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -233, 360 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -356, 253 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -265, 283 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite7" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -245, 101 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite8" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -145, 122 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite9" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -272, 181 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite10" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -231, 388 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite11" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -390, 271 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite12" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -449, 558 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite13" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -265, 528 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite14" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -388, 421 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite15" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -297, 451 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite16" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -277, 269 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite17" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -177, 290 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite18" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -304, 349 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite19" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -110, 433 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite20" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -269, 316 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite21" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -328, 603 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite22" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -144, 573 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite23" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -267, 466 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite24" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -176, 496 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite25" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -156, 314 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite26" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -56, 335 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite27" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -183, 394 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite28" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -490, 203 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite29" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -649, 86 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite30" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -708, 373 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite31" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -524, 343 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite32" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -647, 236 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite33" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -556, 266 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite34" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -536, 84 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite35" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -436, 105 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[node name="AnimatedSprite36" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -563, 164 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "none"
playing = true
script = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Sprite" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Sprite2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
